--- a/DeviceSettings/res/values/aosip_strings.xml
+++ b/DeviceSettings/res/values/aosip_strings.xml
@@ -20,6 +20,10 @@
     <string name="srgb_mode_title">sRGB mode</string>
     <string name="hbm_mode_title">High brightness mode</string>
     <string name="hbm_mode_summary">Instantly enable the peak luminance of the display</string>
+    <string name="auto_hbm_summary">Automatically enable the peak luminance of the display</string>
+    <string name="auto_hbm_title">Automatic High brightness mode</string>
+    <string name="auto_hbm_threshold_title">Automatic High brightness mode threshold (lux)</string>
+    <string name="auto_hbm_threshold_summary"></string>
     <string name="dc_mode_title">DC-Dimming</string>
     <string name="dc_mode_summary">Dim backlight by adjusting DC current drawn to the display</string>
     <string name="dc_mode_auto_summary">Turn on automatic DC dimming based on sunrise, sunset &amp; brightness</string>
@@ -56,9 +60,5 @@
     <string name="vib_call_strength_summary_head">Define the strength of the vibration motor during an incoming call</string>
     <string name="vib_notif_strength_title_head">Notification Strength</string>
     <string name="vib_notif_strength_summary_head">Define the strength of the vibration motor during an incoming notification</string>
-
-    <!-- Gestures: Touchscreen gestures -->
-    <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
-    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
 
 </resources>
